[tool.poetry]
name = "unimol"
version = "1.0.0"
description = ""
authors = ["DP Technology <unimol@dp.tech>"]
license = "MIT"
homepage = "https://github.com/deepmodeling/Uni-Mol"


classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = ">=2.1.1"
pandas = ">=2.2.3"
scikit-learn-extra = ">=0.3.0"

[tool.poetry.extras]
test = ["numpy", "pandas", "scikit-learn-extra"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
