[tool.poetry]
name = "unimol_tools"
version = "0.1.0.post4"
description = "unimol_tools is a Python package for property prediction with Uni-Mol in molecule, materials and protein."
authors = ["DP Technology <unimol@dp.tech>"]
license = "MIT"
homepage = "https://github.com/deepmodeling/Uni-Mol/unimol_tools"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
numpy = ">=1.22.4,<2.0.0"
pandas = "<2.0.0"
torch = ">=2.4.1"
joblib = ">=1.4.2"
rdkit = "*"
pyyaml = "*"
addict = "*"
scikit-learn = ">=1.5.2"
tqdm = ">=4.66.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
